aps 3